--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   permission_handler: ^10.2.0
   expandable_text: ^2.3.0
   flutter_widget_from_html: ^0.15.2
+  skeletonizer: ^1.4.2
 
 
 dev_dependencies:
