--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  webview_flutter: ^4.0.7
+  flutter_inappwebview: ^6.1.0
   path_provider: ^2.0.6
   flutter_screenutil: 5.9.0
   # The following adds the Cupertino Icons font to your application.
