--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   flutter_screenutil: 5.9.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  dio: ^5.0.1
   json_annotation: ^4.8.0
   permission_handler: ^10.2.0
   expandable_text: ^2.3.0
@@ -51,6 +50,19 @@ dependencies:
   flutter_widget_from_html_core: ^0.15.2
   fwfh_url_launcher: ^0.9.1
 
+    # 网络请求
+  dio: ^5.3.3
+  cookie_jar: ^3.0.1
+  #    dio_http_cache: ^0.3.0
+  dio_http2_adapter: ^2.0.0
+  # dio_http_cache:
+  #     git:
+  #         url: https://github.com/guozhigq/dio-http-cache.git
+  dio_cookie_manager: ^2.0.0
+  # toast提示
+  flutter_smart_dialog: ^4.8.1
+  # dom解析渲染
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
