--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
 
     # 网络请求
   dio: ^5.7.0
+  native_dio_adapter: ^1.3.0
   cookie_jar: ^4.0.8
   #    dio_http_cache: ^0.3.0
   dio_http2_adapter: ^2.0.0
@@ -59,8 +60,10 @@ dependencies:
   #     git:
   #         url: https://github.com/guozhigq/dio-http-cache.git
   dio_cookie_manager: ^3.1.1
+
   # toast提示
   flutter_smart_dialog: ^4.8.1
+
   # dom解析渲染
   html: ^0.15.4
 
