--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,8 +75,7 @@ dependencies:
   # 加载动画
   flutter_spinkit: ^5.2.1
 
-  bruno: ^3.4.3
-
+  tdesign_flutter: ^0.1.6
 
 dev_dependencies:
   flutter_test:
@@ -127,6 +126,5 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
-    - assets/sound/
+#    - assets/sound/
     - assets/images/
-    - assets/images/social/
