--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   permission_handler: ^10.2.0
   expandable_text: ^2.3.0
   skeletonizer: ^1.4.2
-  #  url_launcher: ^6.3.0
+  url_launcher: ^6.3.0
   #  flutter_widget_from_html: ^0.15.2
   flutter_widget_from_html_core: ^0.15.2
   fwfh_url_launcher: ^0.9.1
