--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,10 @@ dependencies:
   permission_handler: ^10.2.0
   expandable_text: ^2.3.0
   skeletonizer: ^1.4.2
-  url_launcher: ^6.3.0
-  #  flutter_widget_from_html: ^0.15.2
-  flutter_widget_from_html_core: ^0.15.2
-  fwfh_url_launcher: ^0.9.1
+#  url_launcher: ^6.3.0
+  flutter_widget_from_html: ^0.15.2
+#  flutter_widget_from_html_core: ^0.15.2
+#  fwfh_url_launcher: ^0.9.1
 
     # 网络请求
   dio: ^5.7.0
@@ -101,6 +101,9 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+dependency_overrides:
+  win32: ^5.5.4
+
 flutter:
 
   # The following line ensures that the Material Icons font is
