--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,12 +45,15 @@ dependencies:
   permission_handler: ^10.2.0
   expandable_text: ^2.3.0
   skeletonizer: ^1.4.2
-#  url_launcher: ^6.3.0
-  flutter_widget_from_html: ^0.15.2
-#  flutter_widget_from_html_core: ^0.15.2
-#  fwfh_url_launcher: ^0.9.1
+  #用于启动默认浏览器打开url
+  url_launcher: ^6.3.0
+  # 用这个会与flutter_inappwebview冲突，并且还win32的版本太低还会报错，还需要强制覆盖
+  #  flutter_widget_from_html: ^0.15.2
+  flutter_widget_from_html_core: ^0.15.2
+  fwfh_cached_network_image: ^0.14.3
+    #  fwfh_url_launcher: ^0.9.1
 
-    # 网络请求
+  # 网络请求
   dio: ^5.7.0
   native_dio_adapter: ^1.3.0
   cookie_jar: ^4.0.8
@@ -101,8 +104,8 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-dependency_overrides:
-  win32: ^5.5.4
+#dependency_overrides:
+#  win32: ^5.5.4
 
 flutter:
 
@@ -142,5 +145,5 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
-#    - assets/sound/
+    #    - assets/sound/
     - assets/images/
