--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,19 +50,22 @@ dependencies:
   # 用这个会与flutter_inappwebview冲突，并且还win32的版本太低还会报错，还需要强制覆盖
   #  flutter_widget_from_html: ^0.15.2
   flutter_widget_from_html_core: ^0.15.2
-  fwfh_cached_network_image: ^0.14.3
-    #  fwfh_url_launcher: ^0.9.1
 
   # 网络请求
   dio: ^5.7.0
   native_dio_adapter: ^1.3.0
   cookie_jar: ^4.0.8
-  #    dio_http_cache: ^0.3.0
-  dio_http2_adapter: ^2.0.0
-  # dio_http_cache:
-  #     git:
-  #         url: https://github.com/guozhigq/dio-http-cache.git
+#  dio_http2_adapter: ^2.0.0
   dio_cookie_manager: ^3.1.1
+
+    # 图片&保存
+  extended_image: ^8.0.2
+#  cached_network_image: ^3.2.3
+  cached_network_image: ^3.4.1
+  # 打包报错
+#  image_gallery_saver: ^2.0.3
+  # 保存图片
+  gal: ^2.3.0
 
   # toast提示
   flutter_smart_dialog: ^4.8.1
@@ -82,7 +85,6 @@ dependencies:
 
   intl: ^0.18.0
 
-  cached_network_image: ^3.4.1
 
   # markdown 输入
   expandable: ^5.0.1
@@ -96,6 +98,10 @@ dependencies:
   extended_tabs: ^4.1.0
   # 响应式
   flutter_adaptive_scaffold: ^0.1.11
+
+  # 分享
+  share_plus: ^10.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
