--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,9 @@ dependencies:
 
   # 分享
   share_plus: ^10.1.1
+  # 重启app，删除了cookie后重启才会生效
+  restart_app: ^1.3.2
+
 
 dev_dependencies:
   flutter_test:
