--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,7 +103,10 @@ dependencies:
   # 重启app，删除了cookie后重启才会生效
   restart_app: ^1.3.2
 
+  # 截图，用于分享
   screenshot: ^3.0.0
+  # 生成帖子链接二维码
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
