--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: v2ex
+name: v2next
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-#  sdk: '>=2.19.2 <3.0.0'
+  #  sdk: '>=2.19.2 <3.0.0'
   sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
@@ -56,15 +56,15 @@ dependencies:
   dio: ^5.7.0
   native_dio_adapter: ^1.3.0
   cookie_jar: ^4.0.8
-#  dio_http2_adapter: ^2.0.0
+  #  dio_http2_adapter: ^2.0.0
   dio_cookie_manager: ^3.1.1
 
-    # 图片&保存
+  # 图片&保存
   extended_image: ^8.0.2
-#  cached_network_image: ^3.2.3
+  #  cached_network_image: ^3.2.3
   cached_network_image: ^3.4.1
   # 打包报错
-#  image_gallery_saver: ^2.0.3
+  #  image_gallery_saver: ^2.0.3
   # 保存图片
   gal: ^2.3.0
 
@@ -123,12 +123,19 @@ dev_dependencies:
   json_serializable: ^6.6.1
   analyzer: '6.7.0'
   drift_dev: ^2.21.2
+  flutter_launcher_icons: ^0.14.1
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 #dependency_overrides:
 #  win32: ^5.5.4
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"  # 替换为你的图标文件路径
 
 flutter:
 
