--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,7 +36,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.v2ex"
+        applicationId "com.zyronon.v2next"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         //flutter.minSdkVersion
@@ -46,11 +46,25 @@ android {
         versionName flutterVersionName
     }
 
+    signingConfigs {
+        release {
+            storeFile file('C:/code/v2ex/key.jks') // 使用密钥路径
+            storePassword System.getenv("MY_KEYSTORE_PASSWORD") ?: project.MY_KEYSTORE_PASSWORD
+            keyAlias System.getenv("MY_KEY_ALIAS") ?: project.MY_KEY_ALIAS
+            keyPassword System.getenv("MY_KEY_PASSWORD") ?: project.MY_KEY_PASSWORD
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+//            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
+            // 移除调试符号以减小APK大小
+            shrinkResources true
+            minifyEnabled true // 启用混淆（ProGuard）
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
