--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,8 @@ dependencies:
   # 数据保存
   drift: ^2.21.0
   drift_flutter: ^0.2.1
+  firebase_core: ^3.8.0
+  firebase_analytics: ^11.3.5
 
 dev_dependencies:
   flutter_test:
